<resources>
    <string name="app_name">TO-DOList</string>
    <string name="todo_list">To-Do List</string>
    <string name="add_btn_description">Add a task to the list</string>
    <string name="menu_btn_description">Access menu</string>
    <string name="edit_task">Edit Task</string>
    <string name="name_task">Name of Task</string>
    <string name="confirm_edit">Confirm Changes</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_task">Delete Task</string>
    <string name="confirm_delete">Delete</string>
    <string name="task_value"></string>

    <string name="completed_task">Completed Tasks</string>
</resources>
