<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200">

        <Button
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:alpha="1"
            android:background="@drawable/ic_menu_button"
            android:backgroundTint="#000000" />

    </RelativeLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:alpha=".7"
        android:background="?android:attr/fastScrollThumbDrawable"
        android:backgroundTint="#000000" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/edit_task"
        android:textColor="@color/white"
        android:background="@color/dusty_purple"
        android:textSize="40sp" />


    <EditText
        android:id="@+id/nameOfTask"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:text="@string/name_task"
        android:textColor="@color/white"
        android:layout_marginTop="150sp"
        android:background="@color/dusty_purple"
        android:textSize="40sp"/>

    <ImageView
        android:layout_width="200sp"
        android:layout_height="350sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300sp"
        android:src="@drawable/editimg" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_edit"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:background="@color/dusty_purple"
        android:layout_marginBottom="50sp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50sp"
        android:background="@color/dusty_purple"
        android:textColor="@color/white"/>


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:alpha=".7"
        android:background="?android:attr/fastScrollThumbDrawable"
        android:backgroundTint="#000000" />

</RelativeLayout>