<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:theme="@style/AppThemeDark">


    <RelativeLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dark_mode_action_bar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#00FFFFFF"
            android:text="@string/delete_task"
            android:textAllCaps="false"
            android:textColor="#FF0000"
            android:textSize="16sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/black" />

    </RelativeLayout>

    <TextView
        android:id="@+id/nameOfTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="TextView" />

    <ImageView
        android:layout_width="175sp"
        android:layout_height="175sp"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="100dp"
        android:src="@drawable/delete_sign" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_button"
        android:text="@string/confirm_delete"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:background="@color/dusty_purple"
        android:layout_marginBottom="60sp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_button"
        android:text="@string/cancel_button"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60sp"
        android:background="@color/dusty_purple"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="0dip"
            android:layout_height="50sp"
            android:layout_marginBottom="0sp"
            android:layout_weight="0.5"
            android:background="@color/dusty_purple"
            android:src="@drawable/ic_baseline_home_24"
            android:textColor="@color/white" />

        <ImageButton
            android:layout_weight="0.5"
            android:paddingLeft="1dp"
            android:layout_height="50sp"
            android:id="@+id/tasks_button"
            android:layout_marginBottom="0sp"
            android:background="@color/dusty_purple"
            android:src="@drawable/ic_baseline_check_box_24"
            android:textColor="@color/white" android:layout_width="0dip"/>
    </LinearLayout>


</RelativeLayout>