<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:theme="@style/AppThemeDark"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:drawable/bottom_bar"
        android:backgroundTint="#121212">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#00FFFFFF"
            android:text="@string/todo_list"
            android:textSize="16sp" />

        <View
            android:id="@+id/topBarBottomDivider"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="760dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:fadeScrollbars="true"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbarDefaultDelayBeforeFade="650"
            android:scrollbarSize="10dp"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:verticalScrollbarPosition="right">

            <LinearLayout
                android:id="@+id/addingTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/ListDark" />

        </ScrollView>

        <Button
            android:id="@+id/addTaskBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_btn_description" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="0sp"
            android:layout_weight="0.5"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_home_24"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="?android:attr/listDivider"
            android:foregroundGravity="left" />

        <ImageButton
            android:id="@+id/tasks_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="0sp"
            android:layout_weight="0.5"
            android:background="@color/dusty_purple"
            android:paddingLeft="1dp"
            android:src="@drawable/ic_baseline_check_box_24"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>